# group3_project_wikipedia

./: .gitignore  README.md  main.py  pyproject.toml
.kaggle/: kaggle.json
notebooks/: auto_arima_model.pkl  comprehensive-notebook-on-predictive-analysis.ipynb  def_language.py  transpose_csv.py
presentation/: Python II – Group 3.pptx
src/: anomaly_detection.py  data_download.py  data_sql_loading.py  data_visualization.py  db_to_db.py  loadsql.py  mobile_desktop.py  rndm_forest.py  timeseries.py
wikipedia/: main.py  ux.py
wikipedia/notebooks/: Group work.ipynb  Wikipedia group.ipynb  arima_model.pkl  arma_model.pkl  ashhdvashdv.ipynb  comprehensive-notebook-on-predictive-analysis.ipynb  exp_smoothing_model.pkl
wikipedia/src/: anomaly_detection.py  data_cleaning.py  data_download.py  data_sql_loading.py  db_to_db.py  loadCSVfunction.py  timeseries.py
wikipedia/src/analytics/: anomaly_detection.py  devices.py  language.py  random_forest.py  timeseries.py
wikipedia/src/data_extraction/: data_cleaning.py  data_download.py  data_sampling.py  data_sql_loading.py
wikipedia/src/sqllite/: sqllite_engine.py
wikipedia/src/visualization/: data_visualization.py  top_page_visits_visulization.py
